fix: text-wrap closes #102

--- a/src/element/note.css
+++ b/src/element/note.css
@@ -4,6 +4,7 @@
   font-size: 15px;
   font-weight: 400;
   line-height: 22px;
+  overflow-wrap: break-word;
 }
 
 .note .note-header {
